--- a/src/style.css
+++ b/src/style.css
@@ -286,6 +286,25 @@ main {
     border: 1px solid  #d1d5da;
 }
 
+#section-left .smiley-container {
+    display: inline-block;
+    position: absolute;
+    margin: 13rem 0 0 -3rem;
+    z-index: 2;
+}
+
+#section-left .smiley {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-right: 0;
+    padding: 0.6rem;
+    fill: #586069;
+    background-color: #fff;
+    border: 1px solid #d1d5da;
+    border-radius: 50%;
+}
+
 #section-left span {
     font-size: 1.6rem;
     font-weight: 600;
@@ -337,8 +356,8 @@ main {
     padding: 1rem 0;
 }
 
-.repo-details h3 {
-    color: #0366d6;
+.repo-details h3 a {
+    color: #0077ff;
     font-size: 1.25rem;
     font-weight: 600;
 }
@@ -455,6 +474,10 @@ main {
         height: 7.5rem;
         width: 7.5rem;
         margin: 0 1.5rem 0 0;
+    }
+
+    #section-left .smiley-container {
+        display: none;
     }
 
     #section-nav {
